# docs/swagger.yaml
@@ -251,6 +251,21 @@ paths:
       summary: user authentication
       tags:
       - Authentication
+  /users/logout:
+    get:
+      description: Clear JWT token by setting an empty value and expired time in the
+        cookie
+      operationId: logout-current-user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: logout current user
+      tags:
+      - Authentication
   /users/register:
     post:
       consumes:
